--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   provider: ^6.1.2
+  firebase_core: 3.12.1
+  firebase_database: ^11.3.4
 
 dev_dependencies:
   flutter_test:
